# Ring-AllReduce

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  report.yml
analysis/: generate_plots.py  generate_tables.py  load_results.py  run_full_analysis.py  theoretical_model.py  validate_fit.py
apps/: CMakeLists.txt  benchmark.cpp  correctness_check.cpp  pingpong.cpp
docs/: ALGORITHM.md  ARCHITECTURE.md  BENCHMARKING.md  CONTRIBUTING.md  DESIGN_DECISIONS.md
include/ring_allreduce/: chunking.hpp  reduce_ops.hpp  ring_allreduce.hpp  timer.hpp
report/: Makefile  main.tex  references.bib
report/sections/: 01_introduction.tex  02_background.tex  03_implementation.tex  04_experimental_setup.tex  05_results.tex  06_discussion.tex  07_conclusion.tex
report/tables/: step_count_table.tex  summary_table.tex
results/sample_run/: README.md  generate_synthetic_sample.py  pingpong.csv  results.csv
scripts/: check_mpi_algorithms.sh  env_setup.sh  run_local_sweep.ps1  run_local_sweep.sh  run_slurm_sweep.sbatch
src/: chunking.cpp  ring_allreduce.cpp
tests/: CMakeLists.txt  micro_test.hpp  test_chunking.cpp  test_edge_cases.cpp  test_main.cpp  test_ring_allreduce_correctness.cpp  validate_ring_logic.py
